# Rubix_Cube_solver

./: CMakeLists.txt  IMDB_reviews_Sentiment_Analysis_LSTM.ipynb  README.md  RubiksCube.cpp  RubiksCube.h  VRP.ipynb  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp
Model/PatternDatabase/: PatternDatabase.h
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h
Solver/: BFSSolver.h  DFSSolver.h
model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp
